# treediff.nvim

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: dump_tree.rs  smoke.rs
lua/treediff/: align.lua  diffview.lua  ft_map.lua  highlight.lua  init.lua  lang_config.lua  render.lua  tree_walker.lua
plugin/: treediff.vim
src/: lib.rs  lines.rs  treediff.rs  words.rs
src/diff/: changes.rs  dijkstra.rs  graph.rs  lcs_diff.rs  mod.rs  sliders.rs  unchanged.rs
src/parse/: json_deserialize.rs  language.rs  mod.rs  syntax.rs  tree_sitter_converter.rs
tests/: ci_install_parsers.lua  minimal_init.lua  test_difft_parity.lua  test_diffview.lua
