[package]
name = "treediff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-10"] }
similar = "2"

# Difftastic core dependencies
bumpalo = "3"
hashbrown = "0.14"
radix-heap = "0.4"
rustc-hash = "2"
smallvec = "1"
strsim = "0.11"
line-numbers = "0.3"
typed-arena = "2"
wu-diff = "0.1"
