[package]
name = "treediff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Difftastic core dependencies
bumpalo = "3"
hashbrown = "0.14"
radix-heap = "0.4"
rustc-hash = "2"
smallvec = "1"
strsim = "0.11"
line-numbers = "0.3"
typed-arena = "2"
wu-diff = "0.1"
tree-sitter = "0.26"
libloading = "0.8"
